--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
 # streamlit cryptography>=42.0.0
-# python-3.11
 
-streamlit==1.32.2
-rembg[cpu]==2.0.50
-onnxruntime==1.16.3
-pillow
 
-numpy
+streamlit>=1.32.0
+rembg>=2.0.62
+onnxruntime
+
